force-app/main/default/objects/Sample_Characteristic__c/Sample_Characteristic__c.object-meta.xml
<CustomObject>
    <label>Sample Characteristic</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Sample Characteristic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Characteristic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>