force-app/main/default/objects/Sample_Characteristic__c/fields/Characteristic__c.field-meta.xml
<CustomField>
    <fullName>Characteristic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Characteristic</label>
    <referenceTo>Characteristic__c</referenceTo>
    <relationshipLabel>Sample Characteristic</relationshipLabel>
    <relationshipName>Sample_Characteristic</relationshipName>
    <type>Lookup</type>
</CustomField>