force-app/main/default/objects/Sample_Characteristic__c/fields/Sample_Requests__c.field-meta.xml
<CustomField>
    <fullName>Sample_Requests__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Requests</label>
    <referenceTo>Sample_Transaction__c</referenceTo>
    <relationshipLabel>Sample Characteristic</relationshipLabel>
    <relationshipName>Sample_Characteristic</relationshipName>
    <type>Lookup</type>
</CustomField>